# double-vec

./: Cargo.toml  README.md
src/: dublevec.rs  lib.rs  rectvec.rs  vec2.rs
